# workshop-rest-api

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
tests/: conftest.py  test_dummy.py
