[tool.poetry]
name = "my-rest-api"
version = "0.1.0"
description = ""
authors = ["Björn Reetz <bjoern.reetz@dwd.de>"]
readme = "README.md"
packages = [{include = "my_rest_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
