[tool.poetry]
name = "my-rest-api"
version = "0.1.0"
description = ""
authors = ["Björn Reetz <bjoern.reetz@dwd.de>"]
readme = "README.md"
packages = [{include = "my_rest_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"

[tool.poetry.group.dev.dependencies]
httpx = "^0.25.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
